--- a/package.json
+++ b/package.json
@@ -9,10 +9,33 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-picker/picker": "^2.6.1",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/stack": "^6.3.21",
+    "@reduxjs/toolkit": "^2.2.1",
+    "@supabase/supabase-js": "^2.39.4",
+    "axios": "^1.6.7",
     "expo": "~50.0.6",
+    "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
+    "is-arrayish": "^0.3.2",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-dot-env": "^0.0.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "~2.14.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
+    "react-native-maps": "^1.10.2",
+    "react-native-picker-select": "^9.0.1",
+    "react-native-radio-buttons-group": "^3.0.7",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "~3.29.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.1.0",
+    "react-use": "^17.5.0",
+    "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
