--- a/app.json
+++ b/app.json
@@ -25,6 +25,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "googleApiKey": "AIzaSyCFRhfIzeUHsniS0vzaIpFOmvVzz7aOzLk"
     }
   }
 }
