--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.39.4",
     "axios": "^1.6.7",
     "expo": "~50.0.6",
+    "expo-constants": "~15.4.5",
     "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
     "is-arrayish": "^0.3.2",
