--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-maps": "^1.10.2",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-picker-select": "^9.0.1",
     "react-native-radio-buttons-group": "^3.0.7",
     "react-native-safe-area-context": "^4.9.0",
