--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@supabase/supabase-js": "^2.39.4",
     "axios": "^1.6.7",
+    "connect": "^3.7.0",
     "expo": "~50.0.6",
     "expo-constants": "~15.4.5",
     "expo-location": "~16.5.3",
     "expo-status-bar": "~1.11.1",
+    "geolib": "^3.3.4",
     "is-arrayish": "^0.3.2",
     "react": "18.2.0",
     "react-native": "0.73.4",
@@ -37,6 +39,7 @@
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "react-use": "^17.5.0",
+    "socket.io-client": "^4.7.4",
     "tailwind-react-native-classnames": "^1.5.1"
   },
   "devDependencies": {
