--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
     "react-native-radio-buttons-group": "^3.0.7",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "~3.29.0",
+    "react-native-sound": "^0.11.2",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "react-use": "^17.5.0",
     "socket.io-client": "^4.7.4",
-    "tailwind-react-native-classnames": "^1.5.1"
+    "tailwind-react-native-classnames": "^1.5.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
