--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.1",
+    "@rnmapbox/maps": "^10.1.21",
     "@supabase/supabase-js": "^2.39.4",
     "axios": "^1.6.7",
     "connect": "^3.7.0",
